--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,72 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html,
+body,
+:root {
+  height: 100%;
+  font-family: "Apple Light", sans-serif;
+  font-weight: 400;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+body::-webkit-scrollbar,
+textarea::-webkit-scrollbar,
+div::-webkit-scrollbar {
+  width: 2px;
+  max-height: 50px;
+  background: rgba(100, 100, 100, 0.4);
+}
+
+body::-webkit-scrollbar-track,
+textarea::-webkit-scrollbar-track,
+div::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.3);
+}
+
+body::-webkit-scrollbar-thumb,
+textarea::-webkit-scrollbar-thumb,
+div::-webkit-scrollbar-thumb {
+  background-color: rgba(250, 250, 250, 0.4);
+}
+
+.styled-scrollbar::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  border-radius: 6px;
+}
+
+.styled-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 6px;
+}
+
+.styled-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
+}
+
+.styled-scrollbar {
+  scrollbar-color: #ccc transparent;
+}
+
+/* hide scroll bar */
+.hide-scrollbar::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  max-height: 50px;
+  background: rgba(100, 100, 100, 0);
+}
+
+.hide-scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0);
+}
+
+.hide-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(250, 250, 250, 0);
 }
 
 @layer base {
