--- a/app/globals.css
+++ b/app/globals.css
@@ -74,6 +74,10 @@ div::-webkit-scrollbar-thumb {
   background-color: rgba(250, 250, 250, 0);
 }
 
+.minimal-toolbar_container__Rz_Iq {
+  display: none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
