--- a/app/globals.css
+++ b/app/globals.css
@@ -167,3 +167,103 @@ div::-webkit-scrollbar-thumb {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.audio-controls,
+.video-controls {
+  margin-bottom: 20px;
+}
+.audio-player,
+.video-player {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.audio-player,
+.video-player,
+.recorded-player {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.live-player {
+  height: 200px;
+  width: 400px;
+  border: 1px solid #646cff;
+  margin-bottom: 30px;
+}
+.recorded-player video {
+  height: 400px;
+  width: 800px;
+}
+
+.speaking {
+  width: 8px;
+  height: 40px;
+  border-radius: 4px;
+  display: block;
+  margin: 20px auto;
+  position: relative;
+  background: currentColor;
+  color: #033e8a;
+  box-sizing: border-box;
+  animation: animspeaking 0.3s 0.3s linear infinite alternate;
+}
+
+.speaking::after,
+.speaking::before {
+  content: "";
+  width: 8px;
+  height: 40px;
+  border-radius: 4px;
+  background: currentColor;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 20px;
+  box-sizing: border-box;
+  animation: animspeaking 0.3s 0.45s linear infinite alternate;
+}
+.speaking::before {
+  left: -20px;
+  animation-delay: 0s;
+}
+
+@keyframes animspeaking {
+  0% {
+    height: 48px;
+  }
+  100% {
+    height: 4px;
+  }
+}
+
+.recording {
+  width: 84px;
+  height: 84px;
+  position: relative;
+}
+.recording:before,
+.recording:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: #033e8a;
+  transform: translate(-50%, -100%) scale(0);
+  animation: push 2s infinite linear;
+}
+.recording:after {
+  animation-delay: 1s;
+}
+@keyframes push {
+  0%,
+  50% {
+    transform: translate(-50%, 0%) scale(1);
+  }
+  100% {
+    transform: translate(-50%, -100%) scale(0);
+  }
+}
